2011-04-17  Joseph Pecoraro  <joepeck@webkit.org>

        Reviewed by Timothy Hatcher.

        Move WebNodeHighlighter into its own file
        https://bugs.webkit.org/show_bug.cgi?id=58746

        Extract this class into its own file alongside the
        other WebNodeHighlight files. In doing so do some
        cleanup on WebInspectorClient removing some methods
        that were never called.

        * WebCoreSupport/WebInspectorClient.mm:
        (WebInspectorClient::WebInspectorClient): style fix.
        * WebInspector/WebNodeHighlighter.h: Added.
        * WebInspector/WebNodeHighlighter.mm: Added.
        (-[WebNodeHighlighter initWithInspectedWebView:]): call super init.
        (-[WebNodeHighlighter dealloc]):
        (-[WebNodeHighlighter highlightNode:]):
        (-[WebNodeHighlighter hideHighlight]):
        (-[WebNodeHighlighter didAttachWebNodeHighlight:]):
        (-[WebNodeHighlighter willDetachWebNodeHighlight:]):

2011-04-15  Jia Pu  <jpu@apple.com>

        Reviewed by Dan Bernstein.

        [Mac] WebKit needs to convert the bounding box of autocorrected word to view coordinate.
        https://bugs.webkit.org/show_bug.cgi?id=58717

        Convert the bounding box from window coordinate to view coordinate, which is expected by NSCorrectionPanel.

        * WebCoreSupport/CorrectionPanel.mm:
        (CorrectionPanel::show):

2011-04-15  Shishir Agrawal  <shishir@chromium.org>

        Reviewed by James Robinson.

        Add a flag to guard Page Visibility API changes.
        https://bugs.webkit.org/show_bug.cgi?id=58464

        * Configurations/FeatureDefines.xcconfig:

2011-04-15  Oliver Hunt  <oliver@apple.com>

        GC allocate Structure
        https://bugs.webkit.org/show_bug.cgi?id=58483

        Rolling r83894 r83827 r83810 r83809 r83808 back in with
        a workaround for the gcc bug seen by the gtk bots

        * Plugins/Hosted/NetscapePluginInstanceProxy.h:
        * Plugins/Hosted/ProxyInstance.mm: