@@ -1,5 +1,16 @@
 2011-04-17  Joseph Pecoraro  <joepeck@webkit.org>
 
+        Reviewed by Dan Bernstein.
+
+        Assign to self in WebInspectorWindowController constructors
+        https://bugs.webkit.org/show_bug.cgi?id=58749
+
+        * WebCoreSupport/WebInspectorClient.mm:
+        (-[WebInspectorWindowController init]):
+        (-[WebInspectorWindowController initWithInspectedWebView:]):
+
+2011-04-17  Joseph Pecoraro  <joepeck@webkit.org>
+
         Reviewed by Timothy Hatcher.
 
         Move WebNodeHighlighter into its own file
